<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="current_weather"
            type="com.example.finalproject.model.datatype.weather.CurrentWeather" />
    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/main_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{current_weather.date}"
                        android:layout_gravity="center"
                        android:fontFamily="casual"
                        android:textSize="20sp"
                        android:layout_marginTop="10dp"/>
                    <TextView
                        android:id="@+id/weather_city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{@string/city_text(current_weather.city, current_weather.country)}"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:fontFamily="casual"
                        android:layout_marginStart="20dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{current_weather.weather}"
                        android:textSize="20sp"
                        android:fontFamily="casual"
                        android:layout_marginStart="20dp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:orientation="horizontal"
                    android:layout_marginStart="15dp"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_weight="1"
                        android:text="@{@string/temperature_text(current_weather.temperature)}"
                        android:layout_marginTop="10dp"
                        android:textSize="45sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/weather_main_image"
                        android:layout_width="8dp"
                        android:layout_height="90dp"
                        android:layout_weight="1"
                        android:src="@drawable/ic_launcher_background"
                        android:layout_gravity="end"
                        android:contentDescription="@{current_weather.description}" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp"
                    android:weightSum="4">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/humidity"
                            android:layout_marginStart="10dp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{@string/humidity_text(current_weather.humidity)}"
                            android:layout_marginStart="10dp"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/wind"
                            android:layout_marginStart="10dp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{@string/wind_text(current_weather.wind)}"
                            android:layout_marginStart="10dp"
                            />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pressure"
                            android:layout_marginStart="10dp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{@string/pressure_text(current_weather.pressure)}"
                            android:layout_marginStart="10dp"
                            />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/feels_like"
                            android:layout_marginStart="10dp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{@string/temperature_text(current_weather.feelsLike)}"
                            android:layout_marginStart="10dp"
                            />

                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/today"
                        android:textSize="20sp"
                        android:fontFamily="casual"
                        android:layout_marginStart="20dp"
                        />
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/weather_recycler_view_today"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginTop="15dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tomorrow"
                        android:textSize="20sp"
                        android:fontFamily="casual"
                        android:layout_marginStart="20dp"
                        />
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/weather_recycler_view_tomorrow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginTop="15dp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>